# budget_app

budget_app_repo/: .gitignore  CMakeLists.txt  README.md
budget_app_repo/data/: budget_data.json
budget_app_repo/include/: advice_engine.hpp  app.hpp  models.hpp  storage.hpp
budget_app_repo/src/: advice_engine.cpp  app.cpp  main.cpp  storage.cpp
budget_app_v1/: CMakeLists.txt  README.md  imgui.ini
budget_app_v1/data/: budget_data.json
budget_app_v1/include/: advice_engine.hpp  app.hpp  models.hpp  storage.hpp
budget_app_v1/src/: advice_engine.cpp  app.cpp  storage.cpp
budget_app_v10/: .gitignore  CMakeLists.txt  README.md  imgui.ini
budget_app_v10/data/: budget_data.txt
budget_app_v10/include/: app.hpp  risk_engine.hpp
budget_app_v10/src/: app.cpp  automation_engine.cpp  risk_engine.cpp
budget_app_v11/: CMakeLists.txt  README.md  imgui.ini
budget_app_v11/data/: budget_data.txt
budget_app_v11/include/: automation_engine.hpp  execution_engine.hpp  financial_engine.hpp  models.hpp
budget_app_v11/src/: advice_engine.cpp  app.cpp  execution_engine.cpp  financial_engine.cpp  main.cpp  storage.cpp
budget_app_v2/: CMakeLists.txt  README.md  imgui.ini
budget_app_v2/data/: budget_data.json
budget_app_v2/include/: app.hpp  models.hpp  storage.hpp
budget_app_v2/src/: advice_engine.cpp  app.cpp  storage.cpp
budget_app_v3/: README.md  imgui.ini
budget_app_v3/data/: budget_data.json
budget_app_v3/include/: advice_engine.hpp  models.hpp
budget_app_v3/src/: advice_engine.cpp  app.cpp  main.cpp  storage.cpp
budget_app_v6-best/: CMakeLists.txt  README.md  imgui.ini
budget_app_v6-best/data/: budget_data.txt
budget_app_v6-best/include/: models.hpp
budget_app_v6-best/src/: advice_engine.cpp  app.cpp  storage.cpp
budget_app_v7/: README.md
budget_app_v7/include/: models.hpp  storage.hpp
budget_app_v7/src/: advice_engine.cpp  app.cpp  storage.cpp
budget_app_v8/: README.md  imgui.ini
budget_app_v8/data/: budget_data.txt
budget_app_v8/include/: advice_engine.hpp  models.hpp
budget_app_v8/src/: advice_engine.cpp  app.cpp  storage.cpp
budget_app_v9/: README.md  imgui.ini
budget_app_v9/data/: budget_data.json
budget_app_v9/include/: storage.hpp
budget_app_v9/src/: app.cpp
